Corrigida função de login

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -15,7 +15,7 @@
       </ul><!--/.nav -->
     </div><!--/.navigation -->
 
-    <div class="account" ng-hide="!enabledReports">
+    <div class="account">
       <a href="" class="btn btn-azul" ng-click="newReport()" ng-show="logged"><span class="solic-icon"></span> Nova solicitação</a>
       <a href="" class="btn btn-azul" ng-click="login(true,true)" ng-hide="logged"><span class="solic-icon"></span> Nova solicitação</a>
       <a href="" class="btn btn-auth" ng-click="login(false,true)" ng-hide="logged">Entrar ou criar conta</a>
