--- a/app/views/modal_view_report.html
+++ b/app/views/modal_view_report.html
@@ -24,10 +24,10 @@
 
     <div class="report-comments" ng-show="comments">
       <div class="comment" ng-repeat="comment in comments">
-        <div ng-if="comment.visibility == 1">
+        <div ng-if="comment.visibility == '1'">
           <p>{{ comment.message }}</p>
 
-          <span>Resposta da prefeitura enviada: {{ comment.created_at | date: 'dd/MM/yy HH:mm'}}</span>
+          <span>Resposta do município enviada: {{ comment.created_at | date: 'dd/MM/yy HH:mm'}}</span>
 
           <hr />
         </div>
